--- a/config/module.ini
+++ b/config/module.ini
@@ -7,6 +7,6 @@ author       = "Satoru Nakamura"
 author_link  = "https://researchmap.jp/nakamura.satoru?lang=en"
 ;module_link  = "https://gitlab.com/Daniel-KM/Omeka-S-module-UniversalViewer"
 ;support_link = "https://gitlab.com/Daniel-KM/Omeka-S-module-UniversalViewer/-/issues"
-configurable = false
+configurable = true
 version      = "0.0.1"
 omeka_version_constraint = "^3.0.0"
