--- a/config/module.ini
+++ b/config/module.ini
@@ -5,8 +5,8 @@ tags         = "IIIF"
 license      = "CC0"
 author       = "Satoru Nakamura"
 author_link  = "https://researchmap.jp/nakamura.satoru?lang=en"
-;module_link  = "https://gitlab.com/Daniel-KM/Omeka-S-module-UniversalViewer"
-;support_link = "https://gitlab.com/Daniel-KM/Omeka-S-module-UniversalViewer/-/issues"
+module_link  = "https://github.com/utda/Omeka-S-module-IIIFViewers"
+support_link = "https://github.com/utda/Omeka-S-module-IIIFViewers/issues"
 configurable = true
 version      = "0.0.1"
 omeka_version_constraint = "^3.0.0"
