--- a/config/module.ini
+++ b/config/module.ini
@@ -1,12 +1,12 @@
 [info]
 name         = "IIIF Viewers"
 description  = "Add links of IIIF Manifest and Viewers."
-tags         = "IIIF"
+tags         = "viewer, iiif"
 license      = "CC0"
 author       = "Satoru Nakamura"
 author_link  = "https://researchmap.jp/nakamura.satoru?lang=en"
 module_link  = "https://github.com/utda/Omeka-S-module-IIIFViewers"
 support_link = "https://github.com/utda/Omeka-S-module-IIIFViewers/issues"
 configurable = true
-version      = "0.0.1"
+version      = "0.0.5"
 omeka_version_constraint = "^3.0.0"
