feat: update version

--- a/config/module.ini
+++ b/config/module.ini
@@ -5,8 +5,8 @@ tags         = "viewer, iiif"
 license      = "CC0"
 author       = "Satoru Nakamura"
 author_link  = "https://researchmap.jp/nakamura.satoru?lang=en"
-module_link  = "https://github.com/utda/Omeka-S-module-IIIFViewers"
-support_link = "https://github.com/utda/Omeka-S-module-IIIFViewers/issues"
+module_link  = "https://github.com/omeka-j/Omeka-S-module-IiifViewers"
+support_link = "https://github.com/omeka-j/Omeka-S-module-IiifViewers/issues"
 configurable = true
-version      = "1.1.0"
-omeka_version_constraint = "^3.0.0"
+version      = "1.2.0"
+omeka_version_constraint = "^3.0.0 || ^4.0.0"
